# authentication-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yaml
app/: __init__.py  account.py  authentication.py  cryptography.py  encryption.py  init_env.py  mailing.py  main.py  routes.py  setup.py
app/utilities/: account_functions.py  accounting.py  authenticating.py  authentication.py  encryption.py  hashing.py  mailing.py  models.py  tokening.py  validating.py
scripts/: run.bash  run.sh  secretKey.bash  secretKey.sh  test.sh
scripts/client/: fetchPrivateData.bash  fetchPrivateData.sh  obtainToken.bash  obtainToken.sh
tests/: conftest.py  test_authentication_backend.py  test_change_password.py  test_environment.py  test_forgot_password.py  test_login.py  test_refresh_token.py  test_registration.py  test_resend_verification.py  test_validation.py  test_verification.py
